Adding online E-Learning platform link on home page

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,7 +13,7 @@
     height: 100% !important;
 }
 
-.highlight-scholarship {
+.highlight-main {
   display: inline;
   background: rgba(0, 0, 100); 
 }
